# openedx-lti-bridge

./: pyproject.toml
lti_bridge/: pipeline.py  urls.py  views.py
